force-app/main/default/objects/numm__FAHeaderDeprHis__c/numm__FAHeaderDeprHis__c.object-meta.xml
<CustomObject>
    <description>Historique des durées et des types d&#39;amortissement appliqués suite aux cessions ou réévaluations</description>
    <label>Historique entête plans</label>
    <nameField>
        <displayFormat>FARuleHis-{000000}</displayFormat>
        <label>Nom de Historique des durées appliqueés</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Historiques entêtes plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>