force-app/main/default/objects/numm__FAHeaderDeprHis__c/fields/numm__Date__c.field-meta.xml
<CustomField>
    <fullName>numm__Date__c</fullName>
    <description>Date d&#39;application</description>
    <label>Date d&#39;application</label>
    <required>true</required>
    <type>Date</type>
</CustomField>