force-app/main/default/objects/numm__FAHeaderDeprHis__c/fields/numm__Description__c.field-meta.xml
<CustomField>
    <fullName>numm__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>