force-app/main/default/objects/numm__FAHeaderDeprHis__c/fields/numm__Evenement__c.field-meta.xml
<CustomField>
    <fullName>numm__Evenement__c</fullName>
    <label>Evenement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cession</fullName>
            </value>
            <value>
                <fullName>Réévaluation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>