force-app/main/default/objects/numm__FAHeaderDeprHis__c/fields/numm__FARule1__c.field-meta.xml
<CustomField>
    <fullName>numm__FARule1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Règle /durée comptable</label>
    <referenceTo>numm__FARule__c</referenceTo>
    <relationshipLabel>Historiques entêtes plans (Règle /durée comptable)</relationshipLabel>
    <relationshipName>FAHeaderDeprHis1</relationshipName>
    <type>Lookup</type>
</CustomField>