force-app/main/default/objects/numm__FAHeaderDeprHis__c/fields/numm__FARule2__c.field-meta.xml
<CustomField>
    <fullName>numm__FARule2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Règle /durée fiscale</label>
    <referenceTo>numm__FARule__c</referenceTo>
    <relationshipLabel>Historiques entêtes plans (Règle /durée fiscale)</relationshipLabel>
    <relationshipName>FAHeaderDeprHis2</relationshipName>
    <type>Lookup</type>
</CustomField>