force-app/main/default/objects/numm__FAHeaderDeprHis__c/fields/numm__FARule3__c.field-meta.xml
<CustomField>
    <fullName>numm__FARule3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Règle /durée IFRS</label>
    <referenceTo>numm__FARule__c</referenceTo>
    <relationshipLabel>Historiques entêtes plans (Règle /durée IFRS)</relationshipLabel>
    <relationshipName>FAHeaderDeprHis3</relationshipName>
    <type>Lookup</type>
</CustomField>