force-app/main/default/objects/numm__FAHeaderDeprHis__c/fields/numm__TypeDepreciation02__c.field-meta.xml
<CustomField>
    <fullName>numm__TypeDepreciation02__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Type d&#39;amortissement Fiscal</label>
    <referenceTo>numm__FAParameter__c</referenceTo>
    <relationshipLabel>Historiques entêtes plans (Type d&#39;amortissement Fiscal)</relationshipLabel>
    <relationshipName>FAHeaderDeprHis2</relationshipName>
    <type>Lookup</type>
</CustomField>