force-app/main/default/objects/numm__FAHeaderDeprHis__c/fields/numm__TypeDepreciation03__c.field-meta.xml
<CustomField>
    <fullName>numm__TypeDepreciation03__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Type d&#39;amortissement IFRS</label>
    <referenceTo>numm__FAParameter__c</referenceTo>
    <relationshipLabel>Historiques entêtes plans (Type d&#39;amortissement IFRS)</relationshipLabel>
    <relationshipName>FAHeaderDeprHis3</relationshipName>
    <type>Lookup</type>
</CustomField>